WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288766
Non-unified build fixes, end of February 2025 edition
https://bugs.webkit.org/show_bug.cgi?id=288766
Summary
Non-unified build fixes, end of February 2025 edition
Adrian Perez
Reported
2025-02-27 14:55:01 PST
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2025-02-28 05:34:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41618
EWS
Comment 2
2025-02-28 06:26:47 PST
Committed
291319@main
(9c95e83accf0): <
https://commits.webkit.org/291319@main
> Reviewed commits have been landed. Closing PR #41618 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-02-28 06:27:31 PST
<
rdar://problem/145848857
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug